Added user search classes and changed the way search endpoints are structured.